--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(simulator)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # ftxui configuration
 include(FetchContent)
@@ -53,7 +54,7 @@ enable_testing()
 add_executable(simulator_test
   tests/memory_test.cpp
   tests/assembler_test.cpp
-  tests/processor_test.cpp
+  # tests/processor_test.cpp
 )
 target_include_directories(simulator_test
   PRIVATE ${PROJECT_SOURCE_DIR}/include
